# test

./: .clang-format  CMakeLists.txt  calculator.cpp  math_func.cpp  math_func.h
calculator/: CMakeLists.txt
calculator/include/: math_func.h
src/: calculator.cpp  math_func.cpp
tests/: test_math.cpp
vector/: CMakeLists.txt
vector/include/vector/: vector.h
vector/src/: main.cpp
vector/src/vector/: vector.cpp
vector/tests/: test_vector.cpp
